disabled opening multiples add window, you can still open many edit windows, fixed edit system

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 to do:
 
+ogarnąc lepszy system backupów
 !!! edit window -----> pokazac wartosci wiersza w Entry + logika(zmiana, zapis w pliku) wyjątel dla headingsow !!!
-okno do dodawnia mozna wlaczyc wiecej razy -- zmienic
 
 automatyczny backup po włączeniu aplikacji
 przycisk usuwania ----> po usunieciu reload ID
